--- a/ig.ini
+++ b/ig.ini
@@ -7,6 +7,7 @@ license = CC0-1.0
 version = 0.1.0
 ballotstatus = CI Build
 fhirspec = http://build.fhir.org/
+#fhirspec = http://hl7.org/fhir
 #excludexml = Yes
 #excludejson = Yes
 #excludettl = Yes
