--- a/ig.ini
+++ b/ig.ini
@@ -5,7 +5,7 @@ usage-stats-opt-out = false
 copyrightyear = 2019+
 license = CC0-1.0
 version = 0.1.0
-ballotstatus = CI Build
+ballotstatus = STU1 Ballot
 fhirspec = http://build.fhir.org/
 #fhirspec = http://hl7.org/fhir
 #excludexml = Yes
