--- a/ig.ini
+++ b/ig.ini
@@ -1,11 +1,11 @@
 [IG]
 ig = input/davinci-atr.xml
-template = hl7.fhir.template
+template = hl7.davinci.template#current
 usage-stats-opt-out = false
 copyrightyear = 2019+
 license = CC0-1.0
-version = 0.1.0
-ballotstatus = STU1 Ballot
+version = 2.0.0
+ballotstatus = STU2 Ballot
 fhirspec = http://build.fhir.org/
 #fhirspec = http://hl7.org/fhir
 #excludexml = Yes
