Updates to support 6.1.0 US Core.

--- a/ig.ini
+++ b/ig.ini
@@ -1,6 +1,6 @@
 [IG]
 ig = input/davinci-atr.xml
-template = hl7.davinci.template#current
+template = hl7.davinci.template
 usage-stats-opt-out = false
 copyrightyear = 2019+
 license = CC0-1.0
